bug 364274 Incorrect state for static text in wizard dialogs patch by evan.yan at sun.com r=ginn.chen